--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,6 +14,12 @@
         {{ else }}
         <p class="site-title"><a href='{{ "/" | relURL }}'>{{ .Site.Params.header.title }}</a></p>
         {{ end }}
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
       </div><!-- .site-branding -->
 
       {{ if and .Site.Menus.main .Site.Params.header.has_nav }}
